[gd_scene load_steps=6 format=3 uid="uid://fnppcuq101ww"]

[ext_resource type="PackedScene" uid="uid://do3i72srjb43b" path="res://src/match-simulator/visual-action/actors/field/field.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bc3lvys0807o4" path="res://src/match-simulator/visual-action/actors/ball/ball.tscn" id="2"]
[ext_resource type="Script" path="res://src/match-simulator/visual-action/visual_action.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://bl168omsaktr0" path="res://src/match-simulator/visual-action/actors/player/visual_player.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://bmbdm3wnodvew" path="res://src/match-simulator/visual-action/actors/referee/referee.tscn" id="5"]

[node name="VisualAction" type="Node2D"]
position = Vector2(402, 191)
script = ExtResource("3")

[node name="Field" parent="." instance=ExtResource("1")]
scale = Vector2(1, 1)

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Ball" parent="." instance=ExtResource("2")]
position = Vector2(600, 304)

[node name="HomePlayers" type="Node2D" parent="."]

[node name="AwayPlayers" type="Node2D" parent="."]

[node name="HomeGoal" type="Marker2D" parent="."]
position = Vector2(-16, 304)

[node name="AwayGoal" type="Marker2D" parent="."]
position = Vector2(1224, 304)

[node name="HomePenalty" type="Marker2D" parent="."]
position = Vector2(181.667, 301.667)

[node name="AwayPenalty" type="Marker2D" parent="."]
position = Vector2(1016.67, 300)

[node name="HomeGoalkeeper" parent="." instance=ExtResource("4")]
position = Vector2(64, 304)
is_field_player = false

[node name="AwayGoalkeeper" parent="." instance=ExtResource("4")]
position = Vector2(1136, 304)
color = Color(0.839216, 0.811765, 0.141176, 1)
is_field_player = false

[node name="Referee" parent="." instance=ExtResource("5")]
position = Vector2(560, -40)

[node name="Referee2" parent="." instance=ExtResource("5")]
position = Vector2(648, 640)
rotation = 3.14159

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
